<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <string name="no_open_connection">There is not network connection </string>
    <string name="not_quake_found">There is not earthquake found it</string>
    <string name="time_out">Time out from server. Try one small search</string>
    <string name="not_internet_connection">There is not Internet Connection </string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>


    <!-- Strings For Location Preference [CHAR LIMIT=30], label to show to the user, key to
    identify in the code and default value-->
    <string name="settings_location_label">Location</string>
    <string name="settings_location_key" translatable="false">location</string>
    <string name="settings_location_default" translatable="false">
        @string/settings_location_all_world_value</string>


    <!-- Strings For Dates Preference [CHAR LIMIT=30], label to show to the user, key to
    identify in the code and default value-->
    <string name="settings_dates_label">Dates</string>
    <string name="settings_dates_key" translatable="false">dates</string>
    <string name="settings_dates_default" translatable="false">
        @string/settings_one_month_value</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30], label to show to the user, key to
    identify in the code and default value-->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">3</string>

    <!-- Strings For Minimum Earthquakes[CHAR LIMIT=30], label to show to the user, key to
    identify in the code and default value-->
    <string name="settings_quake_number_label">Earthquakes Quantity</string>
    <string name="settings_quake_number_key" translatable="false">quake_number</string>
    <string name="settings_quake_number_default" translatable="false">10</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30], label to show to the user, key to identify
     in the code and default value-->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">
        @string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_order_by_most_recent_label">Most recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Label for order-by Oldest option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value">time-asc</string>

    <!-- Label for location option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_location_ca_label">Central America</string>
    <string name="settings_location_ca_value" translatable="false">central-america</string>

    <!-- Label for location option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_location_all_world_label">All world</string>
    <string name="settings_location_all_world_value" translatable="false">all-world</string>

    <!-- Label for Costa Rica option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_costa_rica_label">Costa Rica</string>
    <string name="settings_costa_rica_value" translatable="false">costa-rica</string>

    <!-- Label for month option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_one_month_label">One month</string>
    <string name="settings_one_month_value" translatable="false">one-month</string>

    <!-- Label for quarter option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_one_quarter_label">One quarter</string>
    <string name="settings_one_quarter_value" translatable="false">one-quarter</string>

    <!-- Label for half option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_one_half_label">One half</string>
    <string name="settings_one_half_value" translatable="false">one-half</string>

    <!-- Label for year option [CHAR LIMIT=20], label to show and value -->
    <string name="settings_one_year_label">One Year</string>
    <string name="settings_one_year_value" translatable="false">one-year</string>

</resources>
