<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <!--Settings options-->
    <!--The setting menu with all configurations possibles-->

    <!--List preference for the dates. Take the dates array defined -->
    <ListPreference
        android:defaultValue="@string/settings_dates_default"
        android:entries="@array/settings_dates_labels"
        android:entryValues="@array/settings_dates_values"
        android:key="@string/settings_dates_key"
        android:title="@string/settings_dates_label" />

    <!--List preference for the location. Take the location array defined -->
    <ListPreference
        android:defaultValue="@string/settings_location_default"
        android:entries="@array/settings_location_labels"
        android:entryValues="@array/settings_location_values"
        android:key="@string/settings_location_key"
        android:title="@string/settings_location_label" />

    <!--Edit Text preference for the magnitude -->
    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <!--Edit Text preference for the quantity of quakes-->
    <EditTextPreference
        android:defaultValue="@string/settings_quake_number_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_quake_number_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_quake_number_label" />

    <!--List preference for the order by. Take the order by array defined -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>